[package]
name = "test_iced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["canvas", "tokio", "debug"] }
env_logger = "0.11.1"
rand = { version = "0.8.3", features = [] }
